--- a/appointments-api/package.json
+++ b/appointments-api/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node app.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverage": true
   },
   "keywords": [],
   "author": "",
@@ -14,5 +19,9 @@
     "express": "^4.19.2",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
