--- a/appointments-api/.github/workflows/npm-publish.yml
+++ b/appointments-api/.github/workflows/npm-publish.yml
@@ -47,10 +47,10 @@ name: Node.js CI/CD
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   test:
@@ -63,7 +63,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20
 
       - name: Navigate to the correct directory
         run: cd ../../package.json
