--- a/appointments-api/.github/workflows/npm-publish.yml
+++ b/appointments-api/.github/workflows/npm-publish.yml
@@ -1,47 +1,3 @@
-# name: Node.js CI/CD
-
-# on:
-#   push:
-#     branches:
-#       - master
-#   pull_request:
-#     branches:
-#       - master
-
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-
-#     strategy:
-#       matrix:
-#         node-version: [16.x, 18.x]
-
-#     steps:
-#     - name: Checkout code
-#       uses: actions/checkout@v3
-
-#     - name: Set up Node.js
-#       uses: actions/setup-node@v3
-#       with:
-#         node-version: ${{ matrix.node-version }}
-
-#     - name: Install dependencies
-#       run: npm install
-
-#     - name: Run tests
-#       run: npm test
-
-#     - name: Collect coverage
-#       run: npm run test -- --coverage
-
-#     - name: Upload coverage to Codecov
-#       uses: codecov/codecov-action@v3
-#       with:
-#         token: ${{ secrets.CODECOV_TOKEN }}
-#         files: ./coverage/lcov.info
-#         flags: unittests
-#         name: codecov-umbrella
-
 name: Node.js CI/CD
 
 on:
@@ -65,8 +21,15 @@ jobs:
         with:
           node-version: 16
 
-      - name: Navigate to the correct directory
-        run: cd appointments-api
+      - name: Print current directory
+        run: pwd
+
+      - name: List files in root directory
+        run: ls -la
+
+      - name: List files in appointments-api directory
+        run: ls -la
+        working-directory: appointments-api
 
       - name: Install dependencies
         run: npm install
