--- a/appointments-api/.github/workflows/npm-publish.yml
+++ b/appointments-api/.github/workflows/npm-publish.yml
@@ -33,12 +33,12 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: appointments-api
+        working-directory: appointments-api # Certifique-se de que os comandos estão sendo executados no diretório correto
 
       - name: Run tests
         run: npm test
-        working-directory: appointments-api
+        working-directory: appointments-api # Certifique-se de que os comandos estão sendo executados no diretório correto
 
       - name: Collect coverage
         run: npm run test -- --coverage
-        working-directory: appointments-api
+        working-directory: appointments-api # Certifique-se de que os comandos estão sendo executados no diretório correto
